<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pause_body"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pause_spacer_left"
                android:layout_width="15dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/pause_title"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/pause"
                android:textColor="#070F18"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/pause_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon_close"/>

            <TextView
                android:id="@+id/pause_spacer_right"
                android:layout_width="15dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/pause_restart"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@drawable/dialog_button_dark"
            android:gravity="center|fill_vertical"
            android:text="@string/retry"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pause_back"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@drawable/dialog_button_gold"
            android:gravity="center|fill_vertical"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pause_audio"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_sound_on"/>

            <ImageView
                android:id="@+id/pause_music"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_music_on"/>
        </LinearLayout>

        <TextView
            android:id="@+id/pause_spacer_bottom"
            android:layout_width="match_parent"
            android:layout_height="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>