<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/checkpass_body"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview12"
                android:layout_width="15dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textview14"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/star"
                android:textColor="#070F18"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/passcheck_num"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:hint="00"
                android:textColor="#070F18"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textview88"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/times"
                android:textColor="#070F18"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/passcheck_passtimes"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|left"
                android:hint="00"
                android:textColor="#070F18"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/passcheck_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon_close"/>

            <TextView
                android:id="@+id/textview16"
                android:layout_width="15dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview17"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <TextView
                android:id="@+id/textview21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/passcheck_star"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center|center_vertical"
                app:srcCompat="@drawable/star_earned"/>

            <TextView
                android:id="@+id/textview22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/passcheck_start"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@drawable/dialog_button_dark"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="#F3F2F2"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textview20"
            android:layout_width="match_parent"
            android:layout_height="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>